# botched_string

./: CMakeLists.txt  main.cpp
include/: bstring.hpp  bstring_utils.hpp
src/: bstring.cpp  bstring_utils.cpp
